# nrs_act

./: .gitignore  LICENSE  README.md  utils.py  visualize_ckpt.py
act/detr/models/: detr_vae copy.py
behavior_ws/: README.md
behavior_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
behavior_ws/log/: latest_build
behavior_ws/src/nrs_ft_aq2/: CMakeLists.txt  package.xml
behavior_ws/src/nrs_imitation/: package.xml  setup.cfg  setup.py
behavior_ws/src/nrs_imitation/filter/: filter_cmd_continue9D.py
behavior_ws/src/nrs_imitation/nrs_imitation/: __init__.py  act_keyboard_infer_node.py  act_policy_infer.py  act_txt_postprocessor.py  node_act_cmdmotion_infer.py  node_check_inference.py  robot_playback_act_hdf5_recorder.py  ur10_keyboard_recorder.py  vr_demo_hdf5_episode_pusher.py  vr_demo_recorder.py  vr_demo_txt_recorder.py  vr_demo_txt_wo_filter.py
behavior_ws/src/nrs_imitation/yaml/: vr_demo_recorder.yaml
behavior_ws/src/vive_tracker_ros2/: package.xml  setup.cfg  setup.py
behavior_ws/src/vive_tracker_ros2/config/: calibration_matrix.json  calibration_matrix_temp.json
behavior_ws/src/vive_tracker_ros2/data/: robot_tf.csv  vive_tf.csv
behavior_ws/src/vive_tracker_ros2/launch/: vive_and_robot.launch.py  vive_bringup.launch.py  vive_multi_tracker.launch.py
behavior_ws/src/vive_tracker_ros2/vive_tracker_ros2/: 9D_demonstration.py  robot_controller.py  test_calibration.py  utils.py  visualize_only_tracker.py  vive_tracker_node.py
behavior_ws/src/vive_tracker_ros2/yaml/: calibration_matrix.yaml
custom/: custom_constants.py  demo_data_act_form.py  episode_visualize_joints.py
scripts/act/: train_act.py
source/: act_train_utils.py  policy.py  utils.py
source/act/: utils.py
source/common/: fs.py  utils.py
source/custom/: demo_data_act_form.py
source/data/: dataset.py  loader.py  normalization.py
source/models/: __init__.py  act_core.py  backbone.py  encoder.py  policy.py  transformer.py
source/training/: debug.py  engine.py  plotting.py
src/: custom_imitate_episodes.py
src/act/detr/: main.py
src/custom/: check_cam_serial.py
(+176 files in other folders)
