<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nrs_imitation</name>
  <version>0.1.0</version>
  <description>ROS2 node for ACT policy inference with Isaac Sim UR10e</description>

  <maintainer email="lexondms1@g.skku.edu">eunseop</maintainer>
  <license>MIT</license>

  <!-- ========== Dependencies ========== -->
  <!-- Core ROS2 -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Optional but useful -->
  <exec_depend>message_filters</exec_depend>

  <!-- For testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
